cabal-version:      2.4
name:               haddr-lang
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Nikhil Chatterjee
maintainer:         nikhilc1527@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable haddr-lang
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base,
                      containers,
                      hashable,
                      hashmap,
                      process,
                      array,
                      vector,
                      split,
                      mtl,
                      directory
                      
    other-modules:
                      Lexer,
                      Parser2, 
                      Interpreter2,
                      Compiler
    hs-source-dirs:   src
    default-language: Haskell2010
    default-extensions: "BangPatterns","MultiWayIf","OverloadedRecordDot","NoFieldSelectors","DisambiguateRecordFields","DuplicateRecordFields"